--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "axios": "^1.12.2",
     "expo": "^54.0.0",
+    "expo-location": "~19.0.7",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.1.21",
     "react": "19.1.0",
@@ -22,6 +23,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-toast-message": "^2.3.3",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
